--- a/index.html
+++ b/index.html
@@ -6,8 +6,41 @@
     <title>Hit the color</title>
     <meta name = "description" content="Gra dla osób z problemem rozpoznawania kolorów">
     <meta name ="keywords" content = "colors, java script, game, fun" >
+    <meta http-equiv="X-Ua-Compatible" content = "IE=edge,chrome=1">
+    <link rel = "stylesheet" href = "style.css">
+
 
 
 </head>
+<body>
+    <header>
+        <h1 id = "logo">LeshchuDev - początkujący ale kreatywny</h1>
 
+        <nav id = "nawigator">
+            <ul id = "menu">
+                <li>Strona główna</li>
+                <li>Moje projekty</li>
+                <li>O mnie</li>
+                <li>Kontakt</li>
+            </ul>
+        </nav>
+
+    </header>
+    <main>
+        <section>
+            <h2>Hit the color</h2>
+            <input type = "button" value = "Losuj paletę kolorów" id = "losuj">
+            <div id = "czas"></div>
+        </section>
+
+        <section>
+            <div id = "gra">
+                <div id = "karta"></div>
+                <div id = "kolory"></div>
+            </div>
+        </section>
+    </main>
+
+
+</body>
 </html>
