--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section>
             <h2>Hit the color</h2>
             <input type = "button" value = "Losuj paletę kolorów" id = "losuj">
-            <div id = "czas"></div>
+            <div id = "czas">Odmierzany czas</div>
         </section>
 
         <section>
