--- a/index.html
+++ b/index.html
@@ -30,13 +30,22 @@
         <section>
             <h2>Hit the color</h2>
             <input type = "button" value = "Losuj paletę kolorów" id = "losuj">
-            <div id = "czas">Odmierzany czas</div>
+            <span id = "czas">Odmierzany czas</span>
         </section>
 
         <section>
             <div id = "gra">
                 <div id = "karta"></div>
-                <div id = "kolory"></div>
+                <div id = "kolory">
+                    <div class = "kolor" id = "c1"></div>
+                    <div class = "kolor" id = "c2"></div>
+                    <div class = "kolor" id = "c3"></div>
+                    <div class = "kolor" id = "c4"></div>
+                    <div class = "kolor" id = "c5"></div>
+                    <div class = "kolor" id = "c6"></div>
+                    <div class = "kolor" id = "c7"></div>
+                    <div class = "kolor" id = "c8"></div>
+                </div>
             </div>
         </section>
     </main>
