8 kart losowych maja już losowane kolory z palety zielonej

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main>
         <section>
             <h2>Hit the color</h2>
-            <input type = "button" value = "Losuj paletę kolorów" id = "losuj">
+            <button id = "losuj">"Losuj paletę kolorów"</button>
             <span id = "czas">Odmierzany czas</span>
         </section>
 
@@ -50,6 +50,6 @@
         </section>
     </main>
 
-
+    <script src="gra.js"></script>
 </body>
 </html>
