dodałem licznik czasu w momencie losowania palety i zmieniłem jego wygląd

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
     <main>
         <section>
             <h2>Hit the color</h2>
-            <button id = "losuj">"Losuj paletę kolorów"</button>
-            <span id = "czas">Odmierzany czas</span>
+            <div id = "punkty">
+                <button id = "losuj">"Losuj paletę kolorów"</button>
+                <div id = "czas">0.0</div>
+            </div>
         </section>
 
         <section>
