Zsynchronizowałem licznik ze skuchą(+3sek), licznik zeruje się po trafieniu, nie można już kilka razy włączyc licznika więc wunik licznika nie nakłada się na poprzedni

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section>
             <h2>Hit the color</h2>
             <div id = "punkty">
-                <button id = "losuj">"Losuj paletę kolorów"</button>
+                <button id = "losuj">"START"</button>
                 <div id = "czas">0.0</div>
             </div>
         </section>
