dorzyuciłem jeszcze info czy correct czy wrong

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
                 <button id = "losuj">"START"</button>
                 <div id = "czas">0.0</div>
             </div>
+            
+            <div id = "info">?</div></li>
         </section>
 
         <section>
