dodałem plik reset, oddalismy punktacje, listę z punktami na rundę

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <meta name = "description" content="Gra dla osób z problemem rozpoznawania kolorów">
     <meta name ="keywords" content = "colors, java script, game, fun" >
     <meta http-equiv="X-Ua-Compatible" content = "IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel = "stylesheet" href = "reset.css">
     <link rel = "stylesheet" href = "style.css">
+    
 
 
 
@@ -31,10 +34,10 @@
             <h2> Hit the color</h2>
             <div id = "punkty">
                 <button id = "losuj">"START"</button>
-                <div id = "czas">0.0</div>
+                <div id="czas"></div>
             </div>
             
-            <div id = "info">?</div></li>
+            <div id = "info">?</div>
         </section>
 
         <section>
@@ -51,6 +54,8 @@
                     <div class = "kolor" id = "c8"></div>
                 </div>
             </div>
+            <ul id= "wynik"></ul>
+            <div id = "total"></div>
         </section>
     </main>
 
